@@ -2,6 +2,9 @@
 ADDITIONAL_INCLUDE_DIRS += -I../GenericTests/ -I../../..
 ADDITIONAL_OBJCFLAGS += -Wall
 
+resources2_LIB_DIRS += -L./Resources/TestFramework.framework/$(GNUSTEP_TARGET_LDIR)
+resources2_TOOL_LIBS += -lTestFramework
+
 $(GNUSTEP_INSTANCE)_SUBPROJECTS = ../GenericTests
 
 SUBPROJECTS = ../GenericTests Resources
