@@ -1,0 +1,1 @@
+export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:./Resources/TestFramework.framework/Versions/0/
